--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,9 @@ scikit-learn
 tqdm
 
 # PyTorch & CUDA
-torch+cu113
-torchvision+cu113
-torchaudio
+torch --index-url https://download.pytorch.org/whl/cu118
+torchvision --index-url https://download.pytorch.org/whl/cu118
+torchaudio --index-url https://download.pytorch.org/whl/cu118
 
 # CLIP & Others
 git+https://github.com/openai/CLIP.git#egg=clip
@@ -21,7 +21,6 @@ transformers>=4.20.0         # for any text‐encoder or tokenizer utilities
 
 # RINE-style contrastive / losses
 torchtoolbox
-# or you can swap in your own SupCon implementation
 
 # Wavelet-CLIP extras
 PyWavelets
